--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
+    "react-markdown": "^4.3.1",
     "react-scripts": "3.3.0"
   },
   "scripts": {
