--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
             - run: npm install
             - run: npm test
       - aws-s3/sync:
-          from: build
+          from: build-and-test
           to: 's3://personal-site-prod'
           overwrite: true
           arguments: |
