--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
   build-and-test:
     executor:
       name: node/default
+    working_directory: ~/repo
     steps:
       - checkout
       - node/with-cache:
