--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
           steps:
             - run: npm install
             - run: npm test
+            - run: pwd
       - aws-s3/sync:
           from: build-and-test
           to: 's3://personal-site-prod'
