--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
             - run: npm install
             - run: npm test
             - run: pwd
+            - run: ls
       - aws-s3/sync:
           from: build-and-test
           to: 's3://personal-site-prod'
