--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,9 @@ jobs:
           steps:
             - run: npm install
             - run: npm test
-            - run: pwd
-            - run: ls
+            - run: npm run build
       - aws-s3/sync:
-          from: build-and-test
+          from: build
           to: 's3://personal-site-prod'
           overwrite: true
           arguments: |
