maybe this time

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,8 @@ jobs:
 workflows:
   build-and-test:
     jobs:
-      - branches:
-          only:
-            - master
-      - build-and-test
+      - build-and-test:
+          filters:
+            branches:
+              only:
+                - master
