--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,5 +28,4 @@ workflows:
       - build-and-test:
           filters:
             branches:
-              only:
-                - master
+              only: master
