--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-grid-gallery": "^0.5.5",
     "react-icons": "^3.8.0",
     "react-markdown": "^4.3.1",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
